--- a/packages/app/src/pages/home/index.scss
+++ b/packages/app/src/pages/home/index.scss
@@ -20,6 +20,14 @@ $color-bg-light: #FDFCF9;
     justify-content: center;
   }
 
+  &__app-name {
+    font-family: 'STSong', 'SimSun', serif;
+    font-size: 20px;
+    color: $color-text-hint;
+    margin-top: 16px;
+    letter-spacing: 4px;
+  }
+
   &__spinner {
     width: 64px;
     height: 64px;
@@ -124,6 +132,7 @@ $color-bg-light: #FDFCF9;
     flex-direction: column;
     align-items: center;
     padding: 32px 0 24px;
+    min-height: 45vh;
   }
 
   &__beast-glow {
@@ -198,10 +207,9 @@ $color-bg-light: #FDFCF9;
         content: '';
         position: absolute;
         bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 24px;
-        height: 3px;
+        left: 0;
+        right: 0;
+        height: 4px;
         background: $color-primary;
         border-radius: 2px;
       }
